@@ -1,3 +1,9 @@
+2011-01-03  Darin Adler  <darin@apple.com>
+
+        Reviewed by Brady Eidson.
+
+        * wtf/Forward.h: Added Decoder and Encoder.
+
 2011-01-03  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Darin Adler.
